correctly align social icons

--- a/Portals/_default/Skins/AgapeFR/skin.css
+++ b/Portals/_default/Skins/AgapeFR/skin.css
@@ -358,6 +358,7 @@ span.ImageMapDialog {
     background-position: center center;
     background-color: #0e71b4;
     background-image: url(/Portals/_default/skins/agapefr/images/facebook.svg);
+    vertical-align: middle;
 }
 
 .affbicon {
